--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     input[readonly]{opacity:.9}
 
     .rows{display:grid;gap:16px}
-    .row{display:grid;grid-template-columns:1fr 160px 160px;gap:12px;align-items:end;padding:6px 0} 
+    .row{display:grid;grid-template-columns:1fr 160px 160px;gap:12px;align-items:end;padding:6px 0}
     @media (max-width:720px){.row{grid-template-columns:1fr}}
 
     .hint{font-size:11px;color:var(--muted);margin-top:6px;line-height:1.35;min-height:32px}
@@ -84,6 +84,7 @@
         <div class="hd"><b>고객/견적 정보</b><span class="muted">PDF에 함께 출력됩니다</span></div>
         <div class="bd">
           <div class="rows">
+
             <div class="row">
               <div>
                 <label>Recruiter (인재검색) — $11,350 / 라이선스</label>
@@ -93,16 +94,8 @@
                 <label for="qtyRecruiter">수량(라이선스)</label>
                 <select id="qtyRecruiter">
                   <option value="0" selected>선택 안 함</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
+                  <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option>
+                  <option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option>
                 </select>
               </div>
               <div>
@@ -120,16 +113,8 @@
                 <label for="qtyJob">수량(슬롯)</label>
                 <select id="qtyJob">
                   <option value="0" selected>선택 안 함</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
+                  <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option>
+                  <option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option>
                 </select>
               </div>
               <div>
@@ -179,7 +164,7 @@
               <div>
                 <label for="lifeInclude">포함 여부</label>
                 <select id="lifeInclude">
-                  <option value="no">미포함</option>
+                  <option value="no" selected>미포함</option>
                   <option value="yes">포함(금액: 문의)</option>
                 </select>
               </div>
@@ -198,16 +183,8 @@
                 <label for="qtyLTI">수량(라이선스)</label>
                 <select id="qtyLTI">
                   <option value="0" selected>선택 안 함</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
+                  <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option>
+                  <option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option>
                 </select>
               </div>
               <div>
@@ -264,7 +241,6 @@
             기업용 솔루션은 최소 합계금액이 $10,000 부터 계약이 가능합니다.<br/>
             구체적인 문의는 Linkedin Korea Partner로 연락주세요.
           </div>
-          </table>
 
           <div class="foot" style="margin-top:12px">
             <div class="callout" style="margin-top:0;border-color:rgba(52,211,153,.35);background:rgba(52,211,153,.10);color:#d1fae5">
@@ -301,6 +277,48 @@
       style: {},
       addEventListener: () => {},
     };
+
+    // ===== PDF 한글 폰트 로딩 (jsPDF 기본 폰트는 한글을 지원하지 않아 깨집니다) =====
+    const KOREAN_FONT_URL =
+      "https://cdn.jsdelivr.net/npm/@fontsource/noto-sans-kr/files/noto-sans-kr-korean-400-normal.ttf";
+    let __koreanFontB64 = null;
+    let __koreanFontLoading = null;
+
+    function __arrayBufferToBase64(buffer) {
+      const bytes = new Uint8Array(buffer);
+      let binary = "";
+      const chunk = 0x8000;
+      for (let i = 0; i < bytes.length; i += chunk) {
+        binary += String.fromCharCode.apply(null, bytes.subarray(i, i + chunk));
+      }
+      return btoa(binary);
+    }
+
+    async function ensureKoreanFont(doc) {
+      // 이미 폰트가 있으면 스킵
+      try { doc.setFont("NotoSansKR"); return; } catch (e) {}
+
+      if (__koreanFontB64) {
+        doc.addFileToVFS("NotoSansKR-Regular.ttf", __koreanFontB64);
+        doc.addFont("NotoSansKR-Regular.ttf", "NotoSansKR", "normal");
+        doc.setFont("NotoSansKR");
+        return;
+      }
+
+      if (!__koreanFontLoading) {
+        __koreanFontLoading = fetch(KOREAN_FONT_URL)
+          .then((r) => {
+            if (!r.ok) throw new Error("Font download failed");
+            return r.arrayBuffer();
+          })
+          .then((buf) => (__koreanFontB64 = __arrayBufferToBase64(buf)));
+      }
+
+      const b64 = await __koreanFontLoading;
+      doc.addFileToVFS("NotoSansKR-Regular.ttf", b64);
+      doc.addFont("NotoSansKR-Regular.ttf", "NotoSansKR", "normal");
+      doc.setFont("NotoSansKR");
+    }
 
     const PRICES = {
       recruiter: 11350,
@@ -348,26 +366,17 @@
       return d.toISOString().slice(0,10);
     };
 
-    const setDefaultDates = () => {
-      const d = new Date();
-      const toISO = (dt) => dt.toISOString().slice(0,10);
-      if (!$('quoteDate').value) $('quoteDate').value = toISO(d);
-      $('validUntil').value = addDaysISO($('quoteDate').value, 20);
-    };
-
     const buildRows = (state) => {
       const rows = [];
       if (state.qtyRecruiter > 0) rows.push({ name:'Recruiter (인재검색)', unit:PRICES.recruiter, qty:state.qtyRecruiter, amount:state.amtRecruiter });
-      if (state.aiTier !== 'none') rows.push({ name:`AI Hiring Assistant (${PRICES.ai[state.aiTier].label})`, unit:PRICES.ai[state.aiTier].price, qty:1, amount:state.amtAI });
       if (state.qtyJob > 0) rows.push({ name:'Job Slot (채용공고)', unit:PRICES.job, qty:state.qtyJob, amount:state.amtJob });
+      if (state.aiTier !== 'none') rows.push({ name:`AI Hiring Assistant (${PRICES.ai[state.aiTier].label})`, unit:PRICES.ai[state.aiTier].price, qty:1, amount:state.amtAI });
       if (state.lifeInclude === 'yes') rows.push({ name:'Life Page (기업브랜딩/광고) — 문의 필수', unit:null, qty:null, amount:null });
       if (state.qtyLTI > 0) rows.push({ name:'LTI (경쟁사 분석)', unit:PRICES.lti, qty:state.qtyLTI, amount:state.amtLTI });
       return rows;
     };
 
     const recalc = () => {
-      if ($('quoteDate').value) $('validUntil').value = addDaysISO($('quoteDate').value, 20);
-
       const aiTier = $('aiTier').value;
       const qtyRecruiter = toNum($('qtyRecruiter').value);
       const qtyJob = toNum($('qtyJob').value);
@@ -375,8 +384,8 @@
       const lifeInclude = $('lifeInclude').value;
 
       const amtRecruiter = qtyRecruiter * PRICES.recruiter;
-      const amtAI = (PRICES.ai[aiTier]?.price || 0);
       const amtJob = qtyJob * PRICES.job;
+      const amtAI = (PRICES.ai[aiTier]?.price || 0);
       const amtLTI = qtyLTI * PRICES.lti;
 
       const total = amtRecruiter + amtAI + amtJob + amtLTI;
@@ -394,7 +403,7 @@
       $('total2').textContent = money(total);
 
       const rows = buildRows({ aiTier, qtyRecruiter, qtyJob, qtyLTI, lifeInclude, amtRecruiter, amtAI, amtJob, amtLTI, total });
-      
+
       // 최소 계약 금액 안내
       const minNotice = document.getElementById('minNotice');
       if (total > 0 && total < 10000) {
@@ -402,6 +411,7 @@
       } else {
         if (minNotice) minNotice.style.display = 'none';
       }
+
       $('items').textContent = rows.length ? `${rows.length}개 항목` : '-';
 
       const tb = $('tbody');
@@ -415,46 +425,41 @@
       return { total, rows };
     };
 
-    const makePdf = () => {
+    const makePdf = async () => {
       const { total, rows } = recalc();
-      const company = $('company').value || '';
-      const contact = $('contact').value || '';
-      const email = $('email').value || '';
-      const quoteNo = $('quoteNo').value || '';
-      const quoteDate = $('quoteDate').value || '';
-      const validUntil = $('validUntil').value || '';
 
       if (!rows.length) {
         toast('수량/티어를 선택해 주세요.');
         return;
       }
 
+      const quoteNo = genQuoteNo();
+      const quoteDate = new Date().toISOString().slice(0,10);
+      const validUntil = addDaysISO(quoteDate, 20);
+
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({ unit: 'pt', format: 'a4' });
+
+      // ✅ 한글 폰트 로드/적용
+      await ensureKoreanFont(doc);
+      doc.setFont("NotoSansKR");
 
       const marginX = 40;
       let y = 44;
 
-      doc.setFont('helvetica', 'bold');
       doc.setFontSize(18);
       doc.text('Quotation (LinkedIn Solutions)', marginX, y);
-      y += 18;
+      y += 20;
 
-      doc.setFont('helvetica', 'normal');
       doc.setFontSize(10);
       doc.text(`Quote No: ${quoteNo}`, marginX, y);
       doc.text(`Date: ${quoteDate}`, 360, y);
       y += 14;
+
       doc.text(`Valid Until: ${validUntil} (20 days)`, marginX, y);
       y += 14;
-      doc.text('VAT: None', marginX, y);
-      y += 16;
 
-      doc.setFontSize(10);
-      doc.text(`Company: ${company}`, marginX, y);
-      y += 14;
-      doc.text(`Contact: ${contact}`, marginX, y);
-      doc.text(`Email: ${email}`, 360, y);
+      doc.text('VAT: None', marginX, y);
       y += 18;
 
       const body = rows.map(r => {
@@ -468,61 +473,37 @@
         startY: y,
         head: [[ 'Item', 'Unit Price (USD)', 'Qty', 'Amount (USD)' ]],
         body,
-        styles: { font: 'helvetica', fontSize: 9, cellPadding: 6 },
+        styles: { font: 'NotoSansKR', fontSize: 9, cellPadding: 6 },
         headStyles: { fillColor: [11, 18, 32] },
         columnStyles: { 1: { halign: 'right' }, 2: { halign: 'right' }, 3: { halign: 'right' } },
         margin: { left: marginX, right: marginX },
       });
 
       const endY = doc.lastAutoTable.finalY + 16;
-      doc.setFont('helvetica', 'bold');
       doc.setFontSize(12);
       doc.text(`Total (USD): ${money(total)}`, 360, endY);
 
       let y2 = endY + 18;
-      doc.setFont('helvetica', 'normal');
       doc.setFontSize(9);
+
       const lines = [
         '• 유효기간 내 02-6405-4446으로 문의',
-        '• Life Page는 기업 규모/구성에 따라 가격이 상이하여 문의가 필요합니다.',
+        '• Life Page는 기업 규모에 따라 금액이 상이. 문의필수',
         '• 기업용 솔루션 문의: LinkedIn Korea Partner (02-6405-4446 / help@hrpoint.co.kr)'
       ];
       doc.text(lines.join('\n'), marginX, y2);
 
-      const filename = `LinkedIn_Quotation_${quoteNo || 'quote'}.pdf`;
+      const filename = `LinkedIn_Quotation_${quoteNo}.pdf`;
       doc.save(filename);
     };
 
     const getStateForLink = () => ({
-      company: $('company').value || '',
-      contact: $('contact').value || '',
-      email: $('email').value || '',
-      quoteNo: $('quoteNo').value || '',
-      quoteDate: $('quoteDate').value || '',
       qtyRecruiter: $('qtyRecruiter').value || '0',
       aiTier: $('aiTier').value || 'none',
       qtyJob: $('qtyJob').value || '0',
       lifeInclude: $('lifeInclude').value || 'no',
       qtyLTI: $('qtyLTI').value || '0',
     });
-
-    const applyStateFromLink = () => {
-      const p = new URLSearchParams(location.search);
-      const set = (id, key) => { if (p.has(key)) $(id).value = p.get(key); };
-
-      set('company','company');
-      set('contact','contact');
-      set('email','email');
-      set('quoteNo','quoteNo');
-      set('quoteDate','quoteDate');
-      set('qtyRecruiter','qtyRecruiter');
-      if (p.has('aiTier')) $('aiTier').value = p.get('aiTier');
-      set('qtyJob','qtyJob');
-      if (p.has('lifeInclude')) $('lifeInclude').value = p.get('lifeInclude');
-      set('qtyLTI','qtyLTI');
-
-      setDefaultDates();
-    };
 
     const copyLink = async () => {
       const s = getStateForLink();
@@ -545,38 +526,37 @@
     };
 
     const resetAll = () => {
-      $('company').value='';
-      $('contact').value='';
-      $('email').value='';
       $('qtyRecruiter').value='0';
       $('aiTier').value='none';
       $('qtyJob').value='0';
       $('lifeInclude').value='no';
       $('qtyLTI').value='0';
-      $('quoteNo').value = genQuoteNo();
-      $('quoteDate').value = '';
-      setDefaultDates();
       history.replaceState({}, '', location.pathname);
       recalc();
       toast('초기화 완료');
     };
 
-    $('btnPdf').addEventListener('click', (e)=>{e.preventDefault(); makePdf();});
-    $('btnCopyLink').addEventListener('click', (e)=>{e.preventDefault(); copyLink();});
-    $('btnReset').addEventListener('click', (e)=>{e.preventDefault(); resetAll();});
+    document.getElementById('btnPdf')?.addEventListener('click', async (e)=>{e.preventDefault(); await makePdf();});
+    document.getElementById('btnCopyLink')?.addEventListener('click', (e)=>{e.preventDefault(); copyLink();});
+    document.getElementById('btnReset')?.addEventListener('click', (e)=>{e.preventDefault(); resetAll();});
 
-    ;['company','contact','email','quoteNo','quoteDate','qtyRecruiter','aiTier','qtyJob','lifeInclude','qtyLTI'].forEach(id=>{
-      const el = $(id);
+    ['qtyRecruiter','aiTier','qtyJob','lifeInclude','qtyLTI'].forEach(id=>{
+      const el = document.getElementById(id);
       if (!el) return;
       el.addEventListener('input', ()=>recalc());
       el.addEventListener('change', ()=>recalc());
     });
 
-    $('quoteNo').value = genQuoteNo();
-    setDefaultDates();
-    applyStateFromLink();
-    if (!$('quoteNo').value) $('quoteNo').value = genQuoteNo();
-    setDefaultDates();
+    // URL로 입력값 반영 (선택)
+    (function applyStateFromLink(){
+      const p = new URLSearchParams(location.search);
+      if (p.has('qtyRecruiter')) document.getElementById('qtyRecruiter').value = p.get('qtyRecruiter');
+      if (p.has('aiTier')) document.getElementById('aiTier').value = p.get('aiTier');
+      if (p.has('qtyJob')) document.getElementById('qtyJob').value = p.get('qtyJob');
+      if (p.has('lifeInclude')) document.getElementById('lifeInclude').value = p.get('lifeInclude');
+      if (p.has('qtyLTI')) document.getElementById('qtyLTI').value = p.get('qtyLTI');
+    })();
+
     recalc();
   </script>
 </body>
