--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root{
       --bg:#0b0f14;--card:#111827;--muted:#9ca3af;--text:#e5e7eb;--accent:#60a5fa;--line:#1f2937;
-      --soft:#ffffff12; /* 약한 흰색 배경 */
+      --soft:#ffffff12;
     }
     *{box-sizing:border-box}
     body{
@@ -19,7 +19,6 @@
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
 
-    /* ✅ 전체 폭/여백을 조금 더 넓게 */
     .wrap{max-width:1240px;margin:0 auto;padding:28px 18px 120px}
     .top{display:flex;gap:12px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap}
     h1{margin:0;font-size:22px;letter-spacing:-.2px}
@@ -39,26 +38,73 @@
     input:focus, select:focus{border-color:rgba(96,165,250,.6);box-shadow:0 0 0 3px rgba(96,165,250,.14)}
     input[readonly]{opacity:.9}
 
-    /* ✅ 행 간격(상하 간격) 통일 + 깔끔 정렬 */
-    .rows{display:grid;gap:14px}
-    .row{display:grid;grid-template-columns:1fr 170px 180px;gap:12px;align-items:end;padding:10px 0}
+    .rows{display:grid;gap:22px}
+
+    .row{
+      display:grid;
+      grid-template-columns: 1fr 200px 220px;
+      gap:14px;
+      align-items:center;
+      padding:14px 0;
+      border-bottom: 1px solid rgba(31,41,55,.55);
+    }
+    .row:last-child{border-bottom:none}
     @media (max-width:720px){.row{grid-template-columns:1fr}}
 
+    .muted{color:var(--muted);font-size:12px;line-height:1.55}
     .hint{font-size:11px;color:var(--muted);margin-top:8px;line-height:1.35;min-height:0}
+
+    .descBox{
+      margin-top:10px;
+      background:var(--soft);
+      border:1px solid rgba(255,255,255,.08);
+      padding:10px 12px;
+      border-radius:12px;
+      color:#cbd5e1;
+      font-size:12px;
+      line-height:1.55;
+    }
+
+    .solTitle{
+      font-weight:900;
+      letter-spacing:-.2px;
+      font-size:13px;
+      color:#f3f4f6;
+    }
+
+    .rowMeta{
+      display:grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      gap:14px;
+      align-items:end;
+      padding:12px 0 18px;
+      border-bottom: 1px solid rgba(31,41,55,.55);
+    }
+    .rowMeta2{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap:14px;
+      align-items:end;
+      padding:16px 0 6px;
+      border-bottom: 1px solid rgba(31,41,55,.55);
+    }
+    @media (max-width:720px){
+      .rowMeta{grid-template-columns:1fr}
+      .rowMeta2{grid-template-columns:1fr}
+    }
 
     table{width:100%;border-collapse:separate;border-spacing:0}
     th, td{padding:10px 10px;border-bottom:1px solid var(--line);vertical-align:top}
     th{font-size:12px;color:#cbd5e1;text-align:left;background:rgba(11,18,32,.35)}
     td{font-size:13px}
     .right{text-align:right}
-    .muted{color:var(--muted);font-size:12px;line-height:1.55}
 
     .kpis{display:grid;gap:10px}
     .kpi{padding:12px;border:1px solid var(--line);border-radius:14px;background:rgba(11,18,32,.55)}
     .kpi .t{font-size:12px;color:var(--muted)}
     .kpi .v{font-size:20px;font-weight:900;margin-top:6px;letter-spacing:-.2px}
 
-    .callout{margin-top:12px;padding:10px 12px;border-radius:14px;border:1px solid rgba(96,165,250,.25);background:rgba(96,165,250,.08);color:#dbeafe;font-size:12px;line-height:1.55}
+    .callout{margin-top:14px;padding:10px 12px;border-radius:14px;border:1px solid rgba(96,165,250,.25);background:rgba(96,165,250,.08);color:#dbeafe;font-size:12px;line-height:1.55}
 
     .sticky{position:fixed;left:0;right:0;bottom:0;padding:14px 14px;background:rgba(8,12,18,.72);backdrop-filter:blur(10px);border-top:1px solid var(--line)}
     .sticky .inner{max-width:1240px;margin:0 auto;display:flex;gap:10px;align-items:center;justify-content:space-between;flex-wrap:wrap}
@@ -70,21 +116,8 @@
     .toast{position:fixed;left:50%;bottom:80px;transform:translateX(-50%);background:rgba(17,24,39,.92);border:1px solid var(--line);padding:10px 12px;border-radius:12px;box-shadow:0 12px 24px rgba(0,0,0,.35);font-size:13px;display:none;z-index:9999}
 
     .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}
-
-    /* ✅ 설명 영역: 약한 흰색 배경 박스로 구분 */
-    .descBox{
-      margin-top:8px;
-      background:var(--soft);
-      border:1px solid rgba(255,255,255,.08);
-      padding:10px 10px;
-      border-radius:12px;
-      color:#cbd5e1;
-      font-size:12px;
-      line-height:1.55;
-    }
   </style>
 
-  <!-- PDF 생성용 라이브러리 -->
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.31/dist/jspdf.plugin.autotable.min.js" crossorigin="anonymous"></script>
 </head>
@@ -103,46 +136,40 @@
 
     <div class="grid">
       <div class="card">
-        <!-- ✅ 제목 변경 -->
         <div class="hd"><b>기업 솔루션 선택</b><span class="muted">PDF에 함께 출력됩니다</span></div>
         <div class="bd">
+
+          <div class="rowMeta">
+            <div>
+              <label for="companyName">회사명</label>
+              <input id="companyName" placeholder="예) HR Point" />
+            </div>
+            <div>
+              <label for="contactName">담당자</label>
+              <input id="contactName" placeholder="예) 홍길동" />
+            </div>
+            <div>
+              <label for="contactEmail">이메일</label>
+              <input id="contactEmail" placeholder="예) name@company.com" />
+            </div>
+          </div>
+
+          <div class="rowMeta2">
+            <div>
+              <label for="quoteNoInput">견적번호</label>
+              <input id="quoteNoInput" class="mono" readonly />
+            </div>
+            <div>
+              <label>통화</label>
+              <input value="USD (VAT 없음)" readonly />
+            </div>
+          </div>
+
           <div class="rows">
 
-            <!-- ✅ 회사/담당자/이메일/견적번호 입력 -->
             <div class="row">
               <div>
-                <label for="companyName">회사명</label>
-                <input id="companyName" placeholder="예) HR Point" />
-              </div>
-              <div>
-                <label for="contactName">담당자</label>
-                <input id="contactName" placeholder="예) 홍길동" />
-              </div>
-              <div>
-                <label for="contactEmail">이메일</label>
-                <input id="contactEmail" placeholder="예) name@company.com" />
-              </div>
-            </div>
-
-            <div class="row">
-              <div>
-                <label for="quoteNoInput">견적번호</label>
-                <input id="quoteNoInput" class="mono" placeholder="자동 생성 또는 직접 입력" />
-                <div class="hint">비워두면 PDF 다운로드 시 자동 생성됩니다.</div>
-              </div>
-              <div>
-                <label>유효기간(일)</label>
-                <input id="validDays" value="20" readonly />
-              </div>
-              <div>
-                <label>통화</label>
-                <input value="USD (VAT 없음)" readonly />
-              </div>
-            </div>
-
-            <div class="row">
-              <div>
-                <label>Recruiter (인재검색) — $11,350 / 라이선스</label>
+                <div class="solTitle">Recruiter (인재검색) — $11,350 / 라이선스</div>
                 <div class="descBox">13억명의 가입자를 언제든 검색하고, 인맥과 관련없이 메시지를 보낼 수 있습니다.</div>
               </div>
               <div>
@@ -161,7 +188,7 @@
 
             <div class="row">
               <div>
-                <label>Job Slot (채용공고) — $2,010 / 슬롯</label>
+                <div class="solTitle">Job Slot (채용공고) — $2,010 / 슬롯</div>
                 <div class="descBox">직무별 채용공고를 오픈하고, 후보자를 지속적으로 모집합니다.</div>
               </div>
               <div>
@@ -180,7 +207,7 @@
 
             <div class="row">
               <div>
-                <label>AI Hiring Assistant (Recruiter 옵션) — Tier 선택</label>
+                <div class="solTitle">AI Hiring Assistant (Recruiter 옵션) — Tier 선택</div>
                 <div class="descBox">JD 업로드 → 원하는 수 만큼 후보자 AI 평가 및 추천(채용담당자 검토시간 축소)</div>
                 <div class="hint">AI Hiring Assistant는 Recruiter 솔루션 + 옵션상품입니다.</div>
               </div>
@@ -200,7 +227,7 @@
             </div>
 
             <div class="row">
-              <div class="muted" style="margin-top:-4px">※ AI Assistant 금액은 선택한 Tier 단가로 계산됩니다(수량 없음).</div>
+              <div class="muted" style="margin-top:-6px">※ AI Assistant 금액은 선택한 Tier 단가로 계산됩니다(수량 없음).</div>
               <div>
                 <label>AI 평가/추천 가능 수</label>
                 <input id="aiCapacity" readonly />
@@ -213,7 +240,7 @@
 
             <div class="row">
               <div>
-                <label>Life Page (기업브랜딩/광고) — 문의 필수</label>
+                <div class="solTitle">Life Page (기업브랜딩/광고) — 문의 필수</div>
                 <div class="descBox">기업 규모/목표/구성(탭 수 등)에 따라 가격이 상이합니다. 정확한 견적은 문의가 필요합니다.</div>
               </div>
               <div>
@@ -231,7 +258,7 @@
 
             <div class="row">
               <div>
-                <label>LTI (경쟁사 분석) — $12,500 / 라이선스</label>
+                <div class="solTitle">LTI (경쟁사 분석) — $12,500 / 라이선스</div>
                 <div class="descBox">경쟁사의 인력현황 및 역량 분석을 통해 지금 우리에게 필요한 것이 무엇인지 전략을 세울 수 있습니다.</div>
               </div>
               <div>
@@ -249,7 +276,6 @@
             </div>
           </div>
 
-          <!-- ✅ 문의 안내 문구/연락처 변경 -->
           <div class="callout">
             <b>문의 안내</b><br/>
             • 견적서 유효기간 내 <b>Linkedin Korea Partner</b>로 문의 부탁드립니다.<br/>
@@ -334,8 +360,7 @@
       addEventListener: () => {},
     };
 
-    // ===== PDF 한글 폰트 로딩 (jsPDF 기본 폰트는 한글을 지원하지 않아 깨집니다) =====
-    // ✅ 안정적인 TTF 파일로 로딩 (CORS 허용되는 CDN)
+    // ===== PDF 한글 폰트 로딩 =====
     const KOREAN_FONT_URL =
       "https://cdn.jsdelivr.net/gh/google/fonts@main/ofl/notosanskr/NotoSansKR-Regular.ttf";
 
@@ -354,14 +379,12 @@
 
     async function ensureKoreanFont(doc) {
       try { doc.setFont("NotoSansKR"); return; } catch (e) {}
-
       if (__koreanFontB64) {
         doc.addFileToVFS("NotoSansKR-Regular.ttf", __koreanFontB64);
         doc.addFont("NotoSansKR-Regular.ttf", "NotoSansKR", "normal");
         doc.setFont("NotoSansKR");
         return;
       }
-
       if (!__koreanFontLoading) {
         __koreanFontLoading = fetch(KOREAN_FONT_URL, { mode: "cors" })
           .then((r) => {
@@ -370,7 +393,6 @@
           })
           .then((buf) => (__koreanFontB64 = __arrayBufferToBase64(buf)));
       }
-
       const b64 = await __koreanFontLoading;
       doc.addFileToVFS("NotoSansKR-Regular.ttf", b64);
       doc.addFont("NotoSansKR-Regular.ttf", "NotoSansKR", "normal");
@@ -407,14 +429,34 @@
       window.__toastTimer = setTimeout(()=>{t.style.display='none';}, 1600);
     };
 
-    const genQuoteNo = () => {
-      const d = new Date();
+    // ✅ 오늘 날짜(YYYYMMDD) + 랜덤코드 포함
+    const yyyymmdd = (d=new Date()) => {
       const y = d.getFullYear();
       const m = String(d.getMonth()+1).padStart(2,'0');
       const day = String(d.getDate()).padStart(2,'0');
-      const rnd = Math.random().toString(16).slice(2,6).toUpperCase();
-      return `LK-${y}${m}${day}-${rnd}`;
+      return `${y}${m}${day}`;
     };
+    const genQuoteNo = () => {
+      const rnd = Math.random().toString(16).slice(2,6).toUpperCase();
+      return `${yyyymmdd()}-LK-${rnd}`;
+    };
+
+    // ✅ 페이지 로드시 1번 생성해서 유지 (세션동안 동일)
+    function ensureQuoteNoOnce() {
+      const KEY = "lk_quote_no_v1";
+      const fromUrl = new URLSearchParams(location.search).get("quoteNo");
+      const saved = sessionStorage.getItem(KEY);
+
+      const quoteNo =
+        (fromUrl && fromUrl.trim()) ? fromUrl.trim() :
+        (saved && saved.trim()) ? saved.trim() :
+        genQuoteNo();
+
+      sessionStorage.setItem(KEY, quoteNo);
+      const el = document.getElementById("quoteNoInput");
+      if (el) el.value = quoteNo;
+      return quoteNo;
+    }
 
     const addDaysISO = (isoDate, days) => {
       if (!isoDate) return '';
@@ -461,7 +503,6 @@
 
       const rows = buildRows({ aiTier, qtyRecruiter, qtyJob, qtyLTI, lifeInclude, amtRecruiter, amtAI, amtJob, amtLTI, total });
 
-      // 최소 계약 금액 안내
       const minNotice = document.getElementById('minNotice');
       if (total > 0 && total < 10000) {
         if (minNotice) minNotice.style.display = 'block';
@@ -484,27 +525,21 @@
 
     const makePdf = async () => {
       const { total, rows } = recalc();
+      if (!rows.length) { toast('수량/티어를 선택해 주세요.'); return; }
 
-      if (!rows.length) {
-        toast('수량/티어를 선택해 주세요.');
-        return;
-      }
-
-      // ✅ 화면 입력값
       const companyName = $('companyName').value?.trim() || '-';
       const contactName = $('contactName').value?.trim() || '-';
       const contactEmail = $('contactEmail').value?.trim() || '-';
 
-      // ✅ 견적번호: 입력값 우선, 없으면 자동 생성
-      const quoteNo = ($('quoteNoInput').value || '').trim() || genQuoteNo();
+      // ✅ 페이지에서 한번 생성된 견적번호 사용(고정)
+      const quoteNo = $('quoteNoInput').value || ensureQuoteNoOnce();
+
       const quoteDate = new Date().toISOString().slice(0,10);
-      const validDays = toNum($('validDays').value) || 20;
-      const validUntil = addDaysISO(quoteDate, validDays);
+      const validUntil = addDaysISO(quoteDate, 20);
 
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({ unit: 'pt', format: 'a4' });
 
-      // ✅ 한글 폰트 로드/적용
       await ensureKoreanFont(doc);
       doc.setFont("NotoSansKR");
 
@@ -520,7 +555,7 @@
       doc.text(`견적일자: ${quoteDate}`, 360, y);
       y += 14;
 
-      doc.text(`유효기간: ${validUntil} (${validDays}일)`, marginX, y);
+      doc.text(`유효기간: ${validUntil} (20일)`, marginX, y);
       y += 14;
 
       doc.text(`회사명: ${companyName}`, marginX, y);
@@ -563,9 +598,7 @@
       ];
       doc.text(lines.join('\n'), marginX, y2);
 
-      // ✅ 파일명 고정
-      const filename = `[Linkedin] 견적서_(Korea Partner_HR Point).pdf`;
-      doc.save(filename);
+      doc.save(`[Linkedin] 견적서_(Korea Partner_HR Point).pdf`);
     };
 
     const getStateForLink = () => ({
@@ -577,6 +610,7 @@
       companyName: $('companyName').value || '',
       contactName: $('contactName').value || '',
       contactEmail: $('contactEmail').value || '',
+      // ✅ 견적번호도 링크에 포함 (공유 시 동일 번호 유지)
       quoteNo: $('quoteNoInput').value || '',
     });
 
@@ -601,10 +635,11 @@
     };
 
     const resetAll = () => {
+      sessionStorage.removeItem("lk_quote_no_v1"); // ✅ 리셋 시 견적번호도 새로
+
       $('companyName').value='';
       $('contactName').value='';
       $('contactEmail').value='';
-      $('quoteNoInput').value='';
 
       $('qtyRecruiter').value='0';
       $('aiTier').value='none';
@@ -613,6 +648,7 @@
       $('qtyLTI').value='0';
 
       history.replaceState({}, '', location.pathname);
+      ensureQuoteNoOnce();
       recalc();
       toast('초기화 완료');
     };
@@ -621,20 +657,18 @@
     document.getElementById('btnCopyLink')?.addEventListener('click', (e)=>{e.preventDefault(); copyLink();});
     document.getElementById('btnReset')?.addEventListener('click', (e)=>{e.preventDefault(); resetAll();});
 
-    ['companyName','contactName','contactEmail','quoteNoInput','qtyRecruiter','aiTier','qtyJob','lifeInclude','qtyLTI'].forEach(id=>{
+    ['companyName','contactName','contactEmail','qtyRecruiter','aiTier','qtyJob','lifeInclude','qtyLTI'].forEach(id=>{
       const el = document.getElementById(id);
       if (!el) return;
       el.addEventListener('input', ()=>recalc());
       el.addEventListener('change', ()=>recalc());
     });
 
-    // URL로 입력값 반영
     (function applyStateFromLink(){
       const p = new URLSearchParams(location.search);
       if (p.has('companyName')) document.getElementById('companyName').value = p.get('companyName');
       if (p.has('contactName')) document.getElementById('contactName').value = p.get('contactName');
       if (p.has('contactEmail')) document.getElementById('contactEmail').value = p.get('contactEmail');
-      if (p.has('quoteNo')) document.getElementById('quoteNoInput').value = p.get('quoteNo');
 
       if (p.has('qtyRecruiter')) document.getElementById('qtyRecruiter').value = p.get('qtyRecruiter');
       if (p.has('aiTier')) document.getElementById('aiTier').value = p.get('aiTier');
@@ -643,6 +677,8 @@
       if (p.has('qtyLTI')) document.getElementById('qtyLTI').value = p.get('qtyLTI');
     })();
 
+    // ✅ 여기서 1회 생성(또는 URL/세션 값 유지)
+    ensureQuoteNoOnce();
     recalc();
   </script>
 </body>
